review corrections v2.5 text overflow

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -17,8 +17,6 @@
   background: #fff;
   border-radius: 11px;
   height: 361px;
-  /* border-radius: 11px;
-  border-radius: 11px; */
   overflow: hidden;
   position: relative;
 }
@@ -47,7 +45,7 @@
   font-weight: 900;
   font-size: 1.5em;
   line-height: 1.2em;
-  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
